<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CSV Reader And Viewer</string>
    <string name="nofilefound">No CSV file found…!!!</string>
    <string name="csvfileviewer">CSV File Viewer</string>
    <string name="share_file">Share File</string>
    <string name="newfile">New File</string>
    <string name="menu_copy_cell">Copy Cell</string>
    <string name="menu_copy_row">Copy Row</string>
    <string name="menu_copy_column">Copy Column</string>
    <string name="menu_line_number">Line Number</string>
    <string name="menu_scroll_top">Scroll To Top</string>
    <string name="menu_scroll_bottom">Scroll To Bottom</string>
    <string name="menu_scroll_to">Scroll To Position</string>
    <string name="menu_text_size">Text Size</string>
    <string name="menu_text_alignment">Text Alignment</string>
    <string name="menu_text_color">Text Color</string>
    <string name="menu_text_font">Text Font</string>
    <string name="menu_background">Background Color</string>
    <string name="menu_highlight">Cell Highlight Color</string>
    <string name="menu_remove_highlight">Remove Cell Highlight</string>
    <string name="savefile">Save File</string>
    <string name="favouritefiles">Favourite Files</string>
    <string name="nofavouritefilesfound">No Favourite files found…!!!</string>
    <string name="select_files">Select Files</string>
    <string name="conv">Converted PDF Files</string>
    <string name="favfiles">Favourite Files</string>
    <string name="lbl_header_settings">Settings</string>
    <string name="version_name">Version</string>
    <string name="ad_free">Pay for Ad-Free Version</string>
    <string name="user_consent">AdMob Consent</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="license">License</string>
    <string name="prompt_no_conversions">No conversions found.</string>
    <string name="convpdffiles">Converted PDF Files</string>
    <string name="delmsg">Are you sure you want to Delete this file???</string>
    <string name="action_line_number">Line Number</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="prompt_enter_row">Enter Row Number Here.</string>
    <string name="prompt_highlight_color">Pick Cell Highlight Color</string>
    <string name="center">Center</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="prompt_text_font">Pick Text Font</string>
    <string name="arial">Arial</string>
    <string name="baskerville">Baskerville</string>
    <string name="bookman">Bookman Old Style</string>
    <string name="calibri">Calibri</string>
    <string name="garamond">Garamond</string>
    <string name="georgia">Georgia</string>
    <string name="helvetica">Helvetica</string>
    <string name="timesnewroman">Times New Roman</string>
    <string name="verdana">Verdana</string>
    <string name="eu_consent_question">Can we continue to use yor data to tailor ads for you?</string>
    <string name="eu_consent_text">You can change your choice anytime for App in the app settings.Our partners collect data and use a unique identifier on your device to show you ads.</string>
    <string name="eu_consent_yes">Yes, Continue</string>
    <string name="eu_consent_no">No, see the ads that are less irrelevant</string>
    <string name="action_remove_ads">Pay for the ad-free Version</string>
    <string name="action_print">Print</string>
    <string name="allow_all">Allow this to access All Files Access permission to manage files of your devices?</string>
    <string name="allow_file">Allow files access</string>
    <string name="newfileopen">Do you want to import a New CSV File???</string>
    <string name="pdfcreate">Do you want to create a PDF of this CSV File???</string>
    <string name="prompt_cannot_open_file">CSV File Viewer cannot open this file.</string>
    <string name="okay">Okay</string>
    <string name="prompt_creating_table">Creating Table Please wait…</string>
    <string name="prompt_recreating_table">Recreating Table Please wait…</string>
    <string name="prompt_select_cell">Select cell to copy.</string>
    <string name="prompt_select_row">Select row to copy.</string>
    <string name="prompt_row_column_copy">copied to clipboard.</string>
    <string name="prompt_select_column">Select column to copy.</string>
    <string name="start_row">Start Row</string>
    <string name="end_row">End Row</string>
    <string name="prompt_max_copy">Copy Limit (500 Cells)</string>
    <string name="copy">Copy</string>
    <string name="prompt_valid_number">Enter a valid number.</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_enter_filter_text">Enter Filter Text</string>
    <string name="filter_column">Filter Column</string>
    <string name="clear">Clear Text</string>
    <string name="filter">Filter</string>
    <string name="prompt_text_color">Pick Text Color</string>
    <string name="prompt_bg_color">Pick Background Color</string>
    <string name="action_highlight">Cell Highlight Color</string>
    <string name="viewmsg">Do you want to open this pdf file in Default Document Viewer Application???</string>
    <string name="prompt_delete_successful">Delete Successful.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="prompt_storage_access_title">Storage permission</string>
    <string name="prompt_storage_access">Storage permission is needed to access files.</string>
    <string name="grant">Grant</string>
    <string name="warning">Warning</string>
    <string name="prompt_sort_warning">Due to memory requirements, CSV File Viewer app can only sort CSV files with 2,000 rows or less. Sorting large CSV files will take too long to complete and will slow down / hang your device.</string>
    <string name="ascend">Ascending</string>
    <string name="descend">Descending</string>
    <string name="no_sorting">No Sorting</string>
    <string name="action_scroll_to">Scroll To Position</string>
    <string name="prompt_copied_to_clipboard">Text copied to clipboard.</string>
    <string name="prompt_extracting_csv">Extracting CSV data Please wait…</string>
    <string name="prompt_filtering_csv">Filtering CSV document Please wait…</string>
    <string name="prompt_install_viewer">Do you want to install an app that can open a</string>
    <string name="go_to_store">Go to Play store</string>
    <string name="prompt_pdf_saved">Pdf file saved to</string>
    <string name="view">View PDF</string>
    <string name="privacy">Privacy &amp; Policy</string>
</resources>