<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="5dp"
        app:cardMaxElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:padding="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:id="@+id/txtlinenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/menu_text_alignment"
                android:fontFamily="@font/rock"
                android:layout_marginStart="@dimen/_10sdp" />

            <RelativeLayout
                android:id="@+id/relativeLayoutCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_below="@+id/txtlinenumber"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/btncheckedCenter"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/checkbox_h_icn"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:id="@+id/txtCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/center"
                    android:layout_toRightOf="@+id/btncheckedCenter"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/robotomedium"
                    android:layout_marginStart="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/relativeLayoutCenter"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/btnuncheckedTop"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/checkbox_icn"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="#6f7d87"
                    android:id="@+id/txtTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top"
                    android:layout_toRightOf="@+id/btnuncheckedTop"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/robotomedium"
                    android:layout_marginStart="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/relativeLayoutTop"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/btnuncheckedBottom"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/checkbox_icn"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="#6f7d87"
                    android:id="@+id/txtBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom"
                    android:layout_toRightOf="@+id/btnuncheckedBottom"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/robotomedium"
                    android:layout_marginStart="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/relativeLayoutBottom"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/btnuncheckedLeft"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/checkbox_icn"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="#6f7d87"
                    android:id="@+id/txtLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:layout_toRightOf="@+id/btnuncheckedLeft"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/robotomedium"
                    android:layout_marginStart="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/relativeLayoutLeft"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/btnuncheckedRight"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/checkbox_icn"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="#6f7d87"
                    android:id="@+id/txtRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:layout_toRightOf="@+id/btnuncheckedRight"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/robotomedium"
                    android:layout_marginStart="@dimen/_10sdp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/relativeLayoutRight"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/btn_Cancel"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/cancel_btn" />

                <ImageView
                    android:id="@+id/btn_Done"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/done_btn" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
